// Bus Booking System Database Diagram
// Generated on 2026-01-01T05:40:25.724Z
// For use in dbdiagram.io

// =============================================
// USERS AND AUTHENTICATION
// =============================================

Table users {
  id uuid [primary key, default: `uuid_generate_v4()`]
  google_id varchar [unique, null]
  facebook_id varchar [unique, null]
  email varchar [not null, unique]
  name varchar [not null]
  phone varchar [null]
  password_hash varchar [not null]
  is_email_verified boolean [default: false]
  email_verification_code varchar(6) [null]
  email_verification_expires_at timestamptz [null]
  role user_role [default: 'customer']
  avatar_url varchar [null]
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    (role, created_at) [name: 'idx_users_role_created']
    google_id [name: 'idx_users_google_id']
    facebook_id [name: 'idx_users_facebook_id']
    email [name: 'idx_users_email']
    name [name: 'idx_users_name']
    phone [name: 'idx_users_phone']
    role [name: 'idx_users_role']
  }
}

Enum user_role {
  admin
  customer
}

Table refresh_tokens {
  id uuid [primary key, default: `uuid_generate_v4()`]
  user_id uuid [not null]
  token varchar [not null]
  expires_at timestamptz [not null]
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
}

Table payment_methods {
  id uuid [primary key, default: `uuid_generate_v4()`]
  user_id uuid [not null]
  provider varchar [not null]
  token varchar [not null]
  is_default boolean [default: false]
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
}

// =============================================
// OPERATORS AND BUS MANAGEMENT
// =============================================

Table operators {
  id uuid [primary key, default: `uuid_generate_v4()`]
  name varchar [not null]
  contact_email varchar [unique, not null]
  contact_phone varchar [not null]
  status operator_status [default: 'pending']
  approved_at timestamptz [null]
  
  indexes {
    (name, status) [name: 'idx_operators_name_status']
    name [name: 'idx_operators_name']
    contact_email [name: 'idx_operators_email']
    status [name: 'idx_operators_status']
  }
}

Enum operator_status {
  pending
  approved
  suspended
}

Table buses {
  id uuid [primary key, default: `uuid_generate_v4()`]
  operator_id uuid [not null]
  plate_number varchar [unique, not null]
  model varchar [not null]
  seat_capacity integer [not null]
  bus_type bus_type [default: 'standard']
  amenities_json json [null]
  
  indexes {
    (operator_id, model) [name: 'idx_buses_operator_model']
    (operator_id, seat_capacity) [name: 'idx_buses_operator_capacity']
    operator_id [name: 'idx_buses_operator_id']
    plate_number [name: 'idx_buses_plate_number']
    model [name: 'idx_buses_model']
    bus_type [name: 'idx_buses_bus_type']
  }
}

Enum bus_type {
  standard
  limousine
  sleeper
  seater
  vip
  business
}

// =============================================
// SEATS AND LAYOUTS
// =============================================

Table seats {
  id uuid [primary key, default: `uuid_generate_v4()`]
  bus_id uuid [not null]
  seat_code varchar [not null]
  seat_type seat_type [default: 'normal']
  is_active boolean [default: true]
}

Enum seat_type {
  normal
  vip
  business
}

Table seat_layouts {
  id uuid [primary key, default: `uuid_generate_v4()`]
  bus_id uuid [not null]
  layout_type varchar [not null]
  layout_data json [not null]
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
  updated_at timestamptz [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    (bus_id, layout_type) [name: 'idx_seat_layouts_bus_type']
    created_at [name: 'idx_seat_layouts_created_at']
  }
}

// =============================================
// ROUTES AND TRIPS
// =============================================

Table routes {
  id uuid [primary key, default: `uuid_generate_v4()`]
  operator_id uuid [null]
  name varchar [not null]
  description varchar [not null]
  origin varchar [not null]
  destination varchar [not null]
  distance_km decimal(8,2) [null]
  estimated_minutes integer [null]
  is_active boolean [default: true]
  amenities json [null]
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
  updated_at timestamptz [default: `CURRENT_TIMESTAMP`]
}

Table route_points {
  id uuid [primary key, default: `uuid_generate_v4()`]
  routeId uuid [not null]
  name varchar [not null]
  latitude decimal(10,6) [not null]
  longitude decimal(10,6) [not null]
  type point_type [default: 'both']
  order integer [not null]
  distance_from_start integer [null]
  estimated_time_from_start integer [null]
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
  updated_at timestamptz [default: `CURRENT_TIMESTAMP`]
}

Enum point_type {
  pickup
  dropoff
  both
}

Table trips {
  id uuid [primary key, default: `uuid_generate_v4()`]
  route_id uuid [not null]
  bus_id uuid [not null]
  departure_time timestamptz [not null]
  arrival_time timestamptz [not null]
  base_price integer [not null]
  status trip_status [default: 'scheduled']
  average_rating decimal(3,2) [default: 0]
  review_count integer [default: 0]
  
  indexes {
    (route_id, departure_time) [name: 'idx_trips_route_departure']
    (bus_id, departure_time) [name: 'idx_trips_bus_departure']
    (status, departure_time) [name: 'idx_trips_status_departure']
    departure_time [name: 'idx_trips_departure_time']
    arrival_time [name: 'idx_trips_arrival_time']
    route_id [name: 'idx_trips_route_id']
    bus_id [name: 'idx_trips_bus_id']
    status [name: 'idx_trips_status']
  }
}

Enum trip_status {
  scheduled
  in_progress
  completed
  cancelled
  delayed
}

// =============================================
// BOOKINGS AND PASSENGERS
// =============================================

Table bookings {
  id uuid [primary key, default: `uuid_generate_v4()`]
  booking_reference varchar [unique, not null]
  user_id uuid [null]
  trip_id uuid [not null]
  total_amount integer [not null]
  status booking_status [default: 'pending']
  contact_email varchar [null]
  contact_phone varchar [null]
  pickup_point_id uuid [null]
  dropoff_point_id uuid [null]
  booked_at timestamptz [default: `CURRENT_TIMESTAMP`]
  last_modified_at timestamptz [null]
  cancelled_at timestamptz [null]
  expires_at timestamptz [null]
  
  indexes {
    (user_id, trip_id) [name: 'idx_bookings_user_trip']
    (trip_id, status) [name: 'idx_bookings_trip_status']
    (user_id, status) [name: 'idx_bookings_user_status']
    booked_at [name: 'idx_bookings_booked_at']
    (status, expires_at) [name: 'idx_bookings_status_expires_at']
    user_id [name: 'idx_bookings_user_id']
    trip_id [name: 'idx_bookings_trip_id']
    status [name: 'idx_bookings_status']
  }
}

Enum booking_status {
  pending
  paid
  completed
  cancelled
  expired
}

Table passenger_details {
  id uuid [primary key, default: `uuid_generate_v4()`]
  booking_id uuid [not null]
  full_name varchar [not null]
  document_id varchar [null]
  seat_code varchar [not null]
}

Table seat_status {
  id uuid [primary key, default: `uuid_generate_v4()`]
  trip_id uuid [not null]
  seat_id uuid [not null]
  booking_id uuid [null]
  state seat_state [default: 'available']
  locked_until timestamptz [null]
}

Enum seat_state {
  available
  booked
  locked
  reserved
}

// =============================================
// PAYMENTS AND TRANSACTIONS
// =============================================

Table payments {
  id uuid [primary key, default: `uuid_generate_v4()`]
  booking_id uuid [not null]
  provider varchar [not null]
  transaction_ref varchar [not null]
  payos_order_code integer [null]
  amount integer [not null]
  status payment_status [default: 'pending']
  processed_at timestamptz [default: `CURRENT_TIMESTAMP`]
}

Enum payment_status {
  pending
  completed
  failed
  refunded
  cancelled
}

// =============================================
// FEEDBACK AND REVIEWS
// =============================================

Table reviews {
  id uuid [primary key, default: `uuid_generate_v4()`]
  user_id uuid [not null]
  trip_id uuid [not null]
  booking_id uuid [unique, not null]
  rating integer [not null]
  comment text [null]
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    user_id [name: 'idx_reviews_user_id']
    trip_id [name: 'idx_reviews_trip_id']
    rating [name: 'idx_reviews_rating']
    created_at [name: 'idx_reviews_created_at']
    booking_id [name: 'idx_reviews_booking_id']
  }
}

Table feedbacks {
  id uuid [primary key, default: `uuid_generate_v4()`]
  user_id uuid [not null]
  trip_id uuid [not null]
  rating integer [not null]
  comment text [null]
  submitted_at timestamptz [default: `CURRENT_TIMESTAMP`]
}

// =============================================
// NOTIFICATIONS AND AUDIT
// =============================================

Table notifications {
  id uuid [primary key, default: `uuid_generate_v4()`]
  booking_id uuid [null]
  user_id uuid [not null]
  title varchar [null]
  message varchar [not null]
  type varchar [null]
  data jsonb [null]
  channel notification_channel [default: 'in_app']
  status notification_status [default: 'pending']
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
  sent_at timestamptz [null]
  read_at timestamptz [null]
}

Enum notification_channel {
  email
  sms
  push
  in_app
}

Enum notification_status {
  pending
  sent
  failed
  delivered
  read
}

Table audit_logs {
  id uuid [primary key, default: `uuid_generate_v4()`]
  user_id uuid [null]
  action varchar [not null]
  entity_type varchar [not null]
  entity_id uuid [not null]
  old_values jsonb [null]
  new_values jsonb [null]
  ip_address varchar [null]
  user_agent varchar [null]
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
}

Table booking_modification_history {
  id uuid [primary key, default: `uuid_generate_v4()`]
  booking_id uuid [not null]
  modified_by uuid [null]
  modification_type varchar [not null]
  old_values jsonb [null]
  new_values jsonb [null]
  reason varchar [null]
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
}

// =============================================
// RELATIONSHIPS
// =============================================

// User relationships
Ref: refresh_tokens.user_id > users.id [delete: cascade]
Ref: payment_methods.user_id > users.id [delete: cascade]
Ref: bookings.user_id > users.id [delete: set null]
Ref: reviews.user_id > users.id [delete: cascade]
Ref: feedbacks.user_id > users.id [delete: cascade]
Ref: notifications.user_id > users.id [delete: cascade]
Ref: audit_logs.user_id > users.id [delete: set null]

// Operator relationships
Ref: buses.operator_id > operators.id [delete: cascade]
Ref: routes.operator_id > operators.id [delete: set null]

// Bus and seat relationships
Ref: seats.bus_id > buses.id [delete: cascade]
Ref: seat_layouts.bus_id > buses.id [delete: cascade]
Ref: trips.bus_id > buses.id [delete: cascade]

// Route relationships
Ref: route_points.routeId > routes.id [delete: cascade]
Ref: trips.route_id > routes.id [delete: cascade]

// Trip relationships
Ref: bookings.trip_id > trips.id [delete: cascade]
Ref: seat_status.trip_id > trips.id [delete: cascade]
Ref: reviews.trip_id > trips.id [delete: cascade]
Ref: feedbacks.trip_id > trips.id [delete: cascade]

// Booking relationships
Ref: passenger_details.booking_id > bookings.id [delete: cascade]
Ref: payments.booking_id > bookings.id [delete: cascade]
Ref: seat_status.booking_id > bookings.id [delete: set null]
Ref: reviews.booking_id > bookings.id [delete: cascade]
Ref: notifications.booking_id > bookings.id [delete: set null]
Ref: booking_modification_history.booking_id > bookings.id [delete: cascade]

// Seat relationships
Ref: seat_status.seat_id > seats.id [delete: cascade]

// Route point relationships
Ref: bookings.pickup_point_id > route_points.id [delete: set null]
Ref: bookings.dropoff_point_id > route_points.id [delete: set null]

// Modification history relationships
Ref: booking_modification_history.modified_by > users.id [delete: set null]